# openformat

./: CMakeLists.txt  README.md  dockerfile
catalog/: ISO8583.json  can.json  fix.json  test.json  test2.json  test3.json
include/: BitStream.h  CatalogFileReader.h  Engine.h  FileWatcher.h  Logger.h  MessageElement.h  SchemaCatalog.h
proto/: service.proto
src/: CatalogFileReader.cpp  Engine.cpp  SchemaCatalog.cpp  main.cpp
test/: client.cpp  test.txt
